Fix org member table header z-index

--- a/github-mod.css
+++ b/github-mod.css
@@ -152,6 +152,9 @@
     .dropdown-menu {
         z-index: 9;
     }
+    .bulk-actions-header {
+        z-index: 9;
+    }
 }
 @-moz-document regexp("https?://github.com/.*") {
     body:not(.session-authentication):not(.site-header-dark) {
